fixed text alignment issue on phone

--- a/style.css
+++ b/style.css
@@ -772,6 +772,19 @@ footer {
 }
 
 /* Responsive Design */
+@media (max-width: 767px) {
+  .experience-header,
+  .experience-subheader {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .experience-details,
+  .experience-location {
+    margin-bottom: 0.5rem;
+  }
+}
+
 @media (min-width: 768px) {
   .nav-links {
     display: flex;
